syntax = "proto3";


message TransactionBody {
    string originator = 2;
    string destination = 3;
    // TODO: figure out how to represent uint128
    uint64 amount = 4;
    uint64 nonce = 5;
    string method_name = 6;
    bytes args = 7;
}

message SignedTransaction {
    bytes body = 1;
    bytes signature = 2;
}

message CallbackInfo {
    bytes id = 1;
    uint64 result_index = 2;
    string receiver = 3;
}

message AccountingInfo {
    string originator = 1;
    string contract_id = 2;
}

message AsyncCallReceipt {
    uint64 amount = 1;
    uint32 mana = 2;
    bytes method_name = 3;
    bytes args = 4;
    CallbackInfo callback_info = 5;
    AccountingInfo accounting_info = 6;
}

message Receipt {
    string originator = 1;
    string receiver = 2;
    bytes nonce = 3;
    enum BodyType {
        ASYNC_CALL = 0;
        CALLBACK = 1;
        REFUND = 2;
        MANA_ACCOUNTING = 3;
    }
    BodyType type = 4;
    bytes body = 5;
}

message Transaction {
    enum Type {
        SIGNED_TRANSACTION = 0;
        RECEIPT = 1;
    }
    Type type = 1;
    bytes body = 2;
}

message ChainPayload {
    repeated bytes transactions = 1;
}
